* Replaced URL with URI * Fixed issue: DIRMINA-487 (Fix HTTP response with no content-length header) ** All DecodingState now has finishDecode(ProtocolDecoderOutput) which is invoked when a session is closed. ** Added ConsumeToDisconnectionDecodingState
git-svn-id: https://svn.apache.org/repos/asf/mina/trunk@601994 13f79535-47bb-0310-9956-ffa450edef68